--- a/index.html
+++ b/index.html
@@ -5,21 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/887e6aa504.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="logo"><a href="#">LOGO</a></div>
             <ul class="links">
-                <li><a href="hero">Home</a></li>
-                <li><a href="about">About Us</a></li>
-                <li><a href="services">Our Services</a></li>
-                <li><a href="contact">Contact Us</a></li>
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Our Services</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
             <div class="toggle-btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
+        <div class="dropdown-menu open">
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#services">Our Services</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+        </div>
     </header>
 </body>
 <script src="https://kit.fontawesome.com/887e6aa504.js" crossorigin="anonymous"></script>
