--- a/index.html
+++ b/index.html
@@ -21,13 +21,34 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
-        <div class="dropdown-menu open">
+        <div class="dropdown-menu">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#services">Our Services</a></li>
             <li><a href="#contact">Contact Us</a></li>
         </div>
     </header>
+
+    <script>
+        const toggleBtn = document.querySelector(".toggle-btn")
+        const toggleBtnIcon = document.querySelector(".toggle-btn i")
+        const dropDownMenu = document.querySelector(".dropdown-menu")
+
+        toggleBtn.onclick = function(){
+            dropDownMenu.classList.toggle("open")
+            const isOpen = dropDownMenu.classList.contains("open")
+            /*toggleBtnIcon.classList = isOpen
+            ? 'fa-solid fa-xmark'
+            : 'fa-solid fa-bars'*/
+
+            if(isOpen){
+                toggleBtnIcon.classList = 'fa-solid fa-xmark'
+            }
+            else{
+                toggleBtnIcon.classList = 'fa-solid fa-bars'
+            }
+        }
+    </script>
 </body>
 <script src="https://kit.fontawesome.com/887e6aa504.js" crossorigin="anonymous"></script>
 </html>
